Fix IE alignment

--- a/src/scss/japan.scss
+++ b/src/scss/japan.scss
@@ -175,6 +175,7 @@
       display: inline;
       width: 30px;
       height: 24px;
+      line-height: 24px;
       text-align: right;
       margin-right: 0;
     }
